# TakensPhaseSpaceVisualizerVST

./: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  README.md  phase_space_microscope3.py
3d Version/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
3d Version/3D Takens.vst3/Contents/Resources/: moduleinfo.json
3d Version/3D Takens.vst3/Contents/x86_64-win/: 3D Takens.vst3
Stereo 3D/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Stereo 3D/Binocular Takens 3D.vst3/Contents/Resources/: moduleinfo.json
Stereo 3D/Binocular Takens 3D.vst3/Contents/x86_64-win/: Binocular Takens 3D.vst3
Takens Phase Space.vst3/Contents/Resources/: moduleinfo.json
Takens Phase Space.vst3/Contents/x86_64-win/: Takens Phase Space.vst3
